name:           servant-swagger-ui
version:        0.2.4.3.4.0
synopsis:       Servant swagger ui
description:    Provide embedded swagger UI for servant and swagger (i.e. servant-swagger)
category:       Web, Servant, Swagger
homepage:       https://github.com/phadej/servant-swagger-ui#readme
bug-reports:    https://github.com/phadej/servant-swagger-ui/issues
author:         Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:     Oleg Grenrus <oleg.grenrus@iki.fi>
license:        BSD3
license-file:   LICENSE
tested-with:    GHC==7.8.4, GHC==7.10.3, GHC==8.0.2, GHC==8.2.1
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    CHANGELOG.md
    README.md

    jensoleg.index.html.tmpl
    jensoleg-dist/css/api-explorer.css
    jensoleg-dist/css/index.css
    jensoleg-dist/css/print.css
    jensoleg-dist/css/reset.css
    jensoleg-dist/css/screen.css
    jensoleg-dist/css/standalone.css
    jensoleg-dist/css/typography.css
    jensoleg-dist/fonts/droid-sans-v6-latin-700.eot
    jensoleg-dist/fonts/droid-sans-v6-latin-700.svg
    jensoleg-dist/fonts/droid-sans-v6-latin-700.ttf
    jensoleg-dist/fonts/droid-sans-v6-latin-700.woff
    jensoleg-dist/fonts/droid-sans-v6-latin-700.woff2
    jensoleg-dist/fonts/droid-sans-v6-latin-regular.eot
    jensoleg-dist/fonts/droid-sans-v6-latin-regular.svg
    jensoleg-dist/fonts/droid-sans-v6-latin-regular.ttf
    jensoleg-dist/fonts/droid-sans-v6-latin-regular.woff
    jensoleg-dist/fonts/droid-sans-v6-latin-regular.woff2
    jensoleg-dist/images/explorer_icons.png
    jensoleg-dist/images/favicon-16x16.png
    jensoleg-dist/images/favicon-32x32.png
    jensoleg-dist/images/favicon.ico
    jensoleg-dist/images/json_editor_integration.png
    jensoleg-dist/images/logo_small.png
    jensoleg-dist/images/pet_store_api.png
    jensoleg-dist/images/senodio.png
    jensoleg-dist/images/Swagger_explorer.png
    jensoleg-dist/images/Swagger_explorer_min.png
    jensoleg-dist/images/throbber.gif
    jensoleg-dist/images/wordnik_api.png
    jensoleg-dist/index.html
    jensoleg-dist/lib/backbone-min.js
    jensoleg-dist/lib/bootstrap.min.js
    jensoleg-dist/lib/handlebars-2.0.0.js
    jensoleg-dist/lib/highlight.7.3.pack.js
    jensoleg-dist/lib/jquery-1.8.0.min.js
    jensoleg-dist/lib/jquery.ba-bbq.min.js
    jensoleg-dist/lib/jquery.slideto.min.js
    jensoleg-dist/lib/jquery.wiggle.min.js
    jensoleg-dist/lib/jsoneditor.js
    jensoleg-dist/lib/marked.js
    jensoleg-dist/lib/swagger-oauth.js
    jensoleg-dist/lib/underscore-min.js
    jensoleg-dist/moncierge.json
    jensoleg-dist/o2c.html
    jensoleg-dist/petstore.json
    jensoleg-dist/swagger-ui.js
    jensoleg-dist/swagger-ui.min.js
    jensoleg-dist/swagger.json

    index.html.tmpl
    swagger-ui-dist-3.4.0/favicon-16x16.png
    swagger-ui-dist-3.4.0/favicon-32x32.png
    swagger-ui-dist-3.4.0/swagger-ui-bundle.js
    swagger-ui-dist-3.4.0/swagger-ui-standalone-preset.js
    swagger-ui-dist-3.4.0/swagger-ui.css
    swagger-ui-dist-3.4.0/swagger-ui.js

source-repository head
  type: git
  location: https://github.com/phadej/servant-swagger-ui

flag servant-0-5
  description: Whether use servant >= 0.5
  manual: False
  default: True

library
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base              >=4.7      && <4.11
    , blaze-markup      >=0.7.0.2  && <0.9
    , bytestring        >=0.10.4.0 && <0.11
    , directory         >=1.2.1.0  && <1.4
    , file-embed        >=0.0.9    && <0.1
    , filepath          >=1.3.0.2  && <1.5
    , http-media        >=0.6.2    && <0.8
    , servant           >=0.4.4.5  && <0.12
    , servant-blaze     >=0.4.4.5  && <0.9
    , servant-server    >=0.4.4.5  && <0.12
    , servant-swagger   >=1.0.3    && <1.2
    , swagger2          >=2.0.1    && <2.3
    , template-haskell  >=2.9      && <2.13
    , text              >=1.2.0.6  && <1.3
    , wai-app-static    >=3.0.1.1  && <3.2
  if flag(servant-0-5)
    build-depends:
        servant              >=0.5
      , transformers         >=0.3 && <0.6
      , transformers-compat  >=0.3 && <0.6
  else
    build-depends:
        servant                       <0.5
      , either
  exposed-modules:
      Servant.Swagger.UI
      Servant.Swagger.UI.Internal
  default-language: Haskell2010

test-suite example
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      example
  ghc-options: -Wall
  build-depends:
      base
    , servant
    , servant-server
    , servant-swagger
    , servant-swagger-ui
    , swagger2
    , text
    , aeson          >=0.8.0.2  && <1.3
    , base-compat    >=0.6.0    && <0.10
    , lens           >=4.7.0.1  && <4.16
    , wai            >=3.0.3.0  && <3.3
    , warp           >=3.0.13.1 && <3.3
  if flag(servant-0-5)
    build-depends: transformers, transformers-compat
  else
    build-depends: either
  default-language: Haskell2010
