cabal-version:      1.12
name:               servant-swagger-ui-core
version:            0.3.3
x-revision:         2
synopsis:           Servant swagger ui core components
category:           Web, Servant, Swagger
description:
  Provide embedded swagger UI for servant and swagger (i.e. servant-swagger)
  .
  See servant-swagger-ui, servant-swagger-ui-jensoleg or
  servant-swagger-ui-redoc for "concrete" implementations.

homepage:           https://github.com/haskell-servant/servant-swagger-ui
bug-reports:
  https://github.com/haskell-servant/servant-swagger-ui/issues

author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         haskell-servant-maintainers@googlegroups.com
license:            BSD3
license-file:       LICENSE
build-type:         Simple
tested-with:
  GHC ==7.8.4
   || ==7.10.3
   || ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.1

extra-source-files: Changelog.md

source-repository head
  type:     git
  location: https://github.com/haskell-servant/servant-swagger-ui

library
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
      base                 >=4.7      && <4.14
    , blaze-markup         >=0.7.0.2  && <0.9
    , bytestring           >=0.10.4.0 && <0.11
    , http-media           >=0.7.1.3  && <0.9
    , servant              >=0.14     && <0.17
    , servant-blaze        >=0.8      && <0.10
    , servant-server       >=0.14     && <0.17
    , swagger2             >=2.3.0.1  && <2.6
    , text                 >=1.2.3.0  && <1.3
    , transformers         >=0.3      && <0.6
    , transformers-compat  >=0.3      && <0.7
    , wai-app-static       >=3.0.1.1  && <3.2

  exposed-modules:  Servant.Swagger.UI.Core
  default-language: Haskell2010
