cabal-version:  2.0
name:           servant-swagger-ui-example
version:        0

synopsis:       servant-swagger-ui example
description:
  A kind of test-suite of servant-swagger-ui
category:       Web, Servant, Swagger

license:        BSD3
license-file:   LICENSE
author:         Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:     Oleg Grenrus <oleg.grenrus@iki.fi>
tested-with:    GHC==7.8.4, GHC==7.10.3, GHC==8.0.2, GHC==8.2.2, GHC==8.4.1
build-type:     Simple

executable servant-swagger-ui-example
  main-is:             Main.hs
  build-depends:
      base                >=4.7      && <4.12
    , servant
    , servant-server
    , servant-swagger
    , servant-swagger-ui
    , servant-swagger-ui-core
    , servant-swagger-ui-jensoleg
    , servant-swagger-ui-redoc
    , swagger2
    , text
    , aeson               >=0.8.0.2  && <1.4
    , base-compat         >=0.9.3    && <0.10
    , lens                >=4.7.0.1  && <4.17
    , wai                 >=3.0.3.0  && <3.3
    , warp                >=3.0.13.1 && <3.3
  hs-source-dirs:      src
  default-language:    Haskell2010
