cabal-version: 2.0
name:          servant-swagger-ui-example
version:       0.0.1
synopsis:      servant-swagger-ui example
category:      Web, Servant, Swagger
description:   A kind of test-suite of servant-swagger-ui
homepage:      https://github.com/haskell-servant/servant-swagger-ui
bug-reports:
  https://github.com/haskell-servant/servant-swagger-ui/issues

author:        Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:    haskell-servant-maintainers@googlegroups.com
license:       BSD3
license-file:  LICENSE
build-type:    Simple
tested-with:
  GHC ==7.8.4
   || ==7.10.3
   || ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.1

source-repository head
  type:     git
  location: https://github.com/haskell-servant/servant-swagger-ui

executable servant-swagger-ui-example
  main-is:          Main.hs
  ghc-options:      -threaded
  build-depends:
      aeson                        >=0.8.0.2  && <1.5
    , base                         >=4.7      && <4.14
    , base-compat                  >=0.9.3    && <0.12
    , lens                         >=4.7.0.1  && <4.19
    , servant                      >=0.16     && <0.19
    , servant-server               >=0.16     && <0.19
    , servant-swagger
    , servant-swagger-ui
    , servant-swagger-ui-core
    , servant-swagger-ui-jensoleg
    , servant-swagger-ui-redoc
    , swagger2
    , text
    , wai                          >=3.0.3.0  && <3.3
    , warp                         >=3.0.13.1 && <3.4

  hs-source-dirs:   src
  default-language: Haskell2010
