cabal-version: 2.0
name:          servant-swagger-ui-example
version:       0
synopsis:      servant-swagger-ui example
category:      Web, Servant, Swagger
description:   A kind of test-suite of servant-swagger-ui
homepage:      https://github.com/haskell-servant/servant-swagger-ui
bug-reports:
  https://github.com/haskell-servant/servant-swagger-ui/issues

author:        Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:    haskell-servant-maintainers@googlegroups.com
license:       BSD3
license-file:  LICENSE
build-type:    Simple
tested-with:
  GHC ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.7
   || ==9.4.5
   || ==9.6.2

source-repository head
  type:     git
  location: https://github.com/haskell-servant/servant-swagger-ui

executable servant-swagger-ui-example
  main-is:          Main.hs
  ghc-options:      -threaded
  build-depends:
      aeson                        >=0.8.0.2  && <2.3
    , base                         >=4.7      && <4.21
    , base-compat                  >=0.9.3    && <0.15
    , lens                         >=4.7.0.1  && <5.4
    , servant
    , servant-server
    , servant-swagger
    , servant-swagger-ui
    , servant-swagger-ui-core
    , servant-swagger-ui-jensoleg
    , servant-swagger-ui-redoc
    , swagger2
    , text
    , wai                          >=3.0.3.0  && <3.3
    , warp                         >=3.0.13.1 && <3.4

  hs-source-dirs:   src
  default-language: Haskell2010
