cabal-version:  1.12
name:           servant-swagger-ui-redoc
version:        0.3.0.1.21.2

synopsis:       Servant swagger ui: ReDoc theme
description:    Provide embedded swagger UI for servant and swagger (i.e. servant-swagger)
category:       Web, Servant, Swagger
homepage:       https://github.com/phadej/servant-swagger-ui#readme
bug-reports:    https://github.com/phadej/servant-swagger-ui/issues
author:         Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:     Oleg Grenrus <oleg.grenrus@iki.fi>
license:        BSD3
license-file:   LICENSE
tested-with:    GHC==7.8.4, GHC==7.10.3, GHC==8.0.2, GHC==8.2.2, GHC==8.4.1
build-type:     Simple

extra-source-files:
    redoc-dist-1.21.2/redoc.min.js
    redoc.index.html.tmpl

source-repository head
  type: git
  location: https://github.com/phadej/servant-swagger-ui

library
  hs-source-dirs:
      src
  ghc-options: -Wall

  build-depends:
    servant-swagger-ui-core >=0.3 && <0.4

  build-depends:
      base              >=4.7      && <4.12
    , bytestring        >=0.10.4.0 && <0.11
    , file-embed-lzma   >=0        && <0.1
    , servant           >=0.4.4.5  && <0.14
    , servant-server    >=0.4.4.5  && <0.14
    , swagger2          >=2.0.1    && <2.3
    , text              >=1.2.0.6  && <1.3
  exposed-modules:
      Servant.Swagger.UI.ReDoc
  default-language: Haskell2010
