cabal-version:      1.12
name:               servant-swagger-ui-redoc
version:            0.3.3.1.22.3
x-revision:         2
synopsis:           Servant swagger ui: ReDoc theme
category:           Web, Servant, Swagger
description:
  Provide embedded swagger UI for servant and swagger (i.e. servant-swagger)
  .
  ReDoc theme: https://github.com/Rebilly/ReDoc

homepage:           https://github.com/haskell-servant/servant-swagger-ui
bug-reports:
  https://github.com/haskell-servant/servant-swagger-ui/issues

author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         haskell-servant-maintainers@googlegroups.com
license:            BSD3
license-file:       LICENSE
build-type:         Simple
tested-with:
  GHC ==7.8.4 || ==7.10.3 || ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.1

extra-source-files:
  redoc-dist-1.22.3/redoc.min.js
  redoc.index.html.tmpl
  CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/haskell-servant/servant-swagger-ui

library
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:    servant-swagger-ui-core >=0.3.3 && <0.4
  build-depends:
      base             >=4.7      && <4.14
    , bytestring       >=0.10.4.0 && <0.11
    , file-embed-lzma  >=0        && <0.1
    , servant          >=0.14     && <0.18
    , servant-server   >=0.14     && <0.18
    , swagger2         >=2.3.0.1  && <2.6
    , text             >=1.2.3.0  && <1.3

  exposed-modules:  Servant.Swagger.UI.ReDoc
  default-language: Haskell2010
