cabal-version:      1.12
name:               servant-swagger-ui
version:            0.3.5.5.0.0
synopsis:           Servant swagger ui
category:           Web, Servant, Swagger
description:
  Provide embedded swagger UI for servant and swagger (i.e. servant-swagger)
  .
  https://github.com/swagger-api/swagger-ui

homepage:           https://github.com/haskell-servant/servant-swagger-ui
bug-reports:
  https://github.com/haskell-servant/servant-swagger-ui/issues

author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         haskell-servant-maintainers@googlegroups.com
license:            BSD3
license-file:       LICENSE
build-type:         Simple
tested-with:
  GHC ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.7
   || ==9.4.5

extra-source-files:
  CHANGELOG.md
  index.html.tmpl
  swagger-ui-dist-5.0.0/favicon-16x16.png
  swagger-ui-dist-5.0.0/favicon-32x32.png
  swagger-ui-dist-5.0.0/oauth2-redirect.html
  swagger-ui-dist-5.0.0/swagger-ui-bundle.js
  swagger-ui-dist-5.0.0/swagger-ui-bundle.js.map
  swagger-ui-dist-5.0.0/swagger-ui-es-bundle-core.js
  swagger-ui-dist-5.0.0/swagger-ui-es-bundle-core.js.map
  swagger-ui-dist-5.0.0/swagger-ui-es-bundle.js
  swagger-ui-dist-5.0.0/swagger-ui-es-bundle.js.map
  swagger-ui-dist-5.0.0/swagger-ui-standalone-preset.js
  swagger-ui-dist-5.0.0/swagger-ui-standalone-preset.js.map
  swagger-ui-dist-5.0.0/swagger-ui.css
  swagger-ui-dist-5.0.0/swagger-ui.css.map
  swagger-ui-dist-5.0.0/swagger-ui.js
  swagger-ui-dist-5.0.0/swagger-ui.js.map
  swagger-ui-dist-5.0.0/swagger-initializer.js
  swagger-ui-dist-5.0.0/index.css

source-repository head
  type:     git
  location: https://github.com/haskell-servant/servant-swagger-ui

library
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:    servant-swagger-ui-core >=0.3.5 && <0.4
  build-depends:
      base             >=4.7      && <4.18
    , aeson            >=0.8.0.2  && <2.2
    , bytestring       >=0.10.4.0 && <0.12
    , file-embed-lzma  >=0        && <0.1
    , servant          >=0.14     && <0.20
    , servant-server   >=0.14     && <0.20
    , text             >=1.2.3.0  && <2.1

  exposed-modules:  Servant.Swagger.UI
  default-language: Haskell2010
